# mushroom-monorepo

./: .gitignore  README.md
dashboards/: farm-dashboard.json
electronics/: ELECTRONICS.md
electronics/zvs_sterilizer/: sym-lib-table  zvs_sterilizer.kicad_prl  zvs_sterilizer.kicad_pro  zvs_sterilizer.kicad_sch
notebook/: HOWTO.md  mushroom.ipynb  pyproject.toml
notebook/.ipynb_checkpoints/: mushroom-checkpoint.ipynb
software/: SOFTWARE.md  lightningspore-architecture.drawio  mushroom-farm-diagram.drawio
software/analog-gauge-reader/: analog_gauge_reader.py  test-calibration.py  uvc-ctl.py  video_record.py
software/base-station/: Dockerfile.template  README.md  alloy.config  app.py  base-station-architecture.drawio  build.sh  discovery.py  grafana-agent.yaml.jinja  pyproject.toml  start.sh  supervisord.conf  template.py
software/base-station/pid/: prometheus_query.py  run_pid.py
software/base-station/templates/: outlet_detail.html  pid_control.html
software/base-station/tests/: endpoint_test.py  example-test.py
software/camera-server/: README.md  pyproject.toml  server.py
software/esphome/: .gitignore  README.md  core-thermocouple.yaml  core-ths-sht4x.yaml  core-ths.yaml  core-ths_co2.yaml  core.yaml  livingroom.yaml  main.py  pyproject.toml  secrets-sample.yaml  thermocouple.yaml  wifi.yaml  xiao_esp32s3.yaml
software/humidity_pid/: prometheus_query.py
software/light-control/: main.py
software/pico-firmware/: README.md  initialize.sh  network-scan.py  read_serial.py  requirements-circuitpy-dev.text
software/pico-firmware/SCD41_THS_CO2/: boot.py  code.py  (+4 more)
software/shelly-plugs/: README.md
software/thermocouple/: pid.py  thermocouple_over_serial.py
(+34 files in other folders)
